--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
         <nav class="container mx-auto px-4 py-3">
             <div class="flex justify-between items-center">
                 <a href="#" class="text-2xl font-bold flex items-center">
-                    <i class="fas fa-shield-alt mr-2"></i>
+                    <i class="fas fa-shield-alt mr-2 text-blue-400"></i>
                     Literasi Digital
                 </a>
                 <ul class="hidden md:flex space-x-4">
-                    <li><a href="#cyber-crimes" class="hover:text-blue-400 transition duration-300"><i class="fas fa-exclamation-triangle mr-1"></i>Cyber Crimes</a></li>
-                    <li><a href="#literasi-digital" class="hover:text-blue-400 transition duration-300"><i class="fas fa-book-reader mr-1"></i>Literasi Digital</a></li>
-                    <li><a href="#etika-privasi" class="hover:text-blue-400 transition duration-300"><i class="fas fa-user-secret mr-1"></i>Etika Privasi</a></li>
-                    <li><a href="#praktik-terbaik" class="hover:text-blue-400 transition duration-300"><i class="fas fa-check-circle mr-1"></i>Praktik Terbaik</a></li>
+                    <li><a href="#cyber-crimes" class="hover:text-blue-400 transition duration-300"><i class="fas fa-exclamation-triangle mr-1 text-red-500"></i>Cyber Crimes</a></li>
+                    <li><a href="#literasi-digital" class="hover:text-blue-400 transition duration-300"><i class="fas fa-book-reader mr-1 text-green-500"></i>Literasi Digital</a></li>
+                    <li><a href="#etika-privasi" class="hover:text-blue-400 transition duration-300"><i class="fas fa-user-secret mr-1 text-purple-500"></i>Etika Privasi</a></li>
+                    <li><a href="#praktik-terbaik" class="hover:text-blue-400 transition duration-300"><i class="fas fa-check-circle mr-1 text-yellow-500"></i>Praktik Terbaik</a></li>
                 </ul>
                 <button class="md:hidden text-white focus:outline-none" id="menu-toggle">
                     <i class="fas fa-bars"></i>
                 </button>
             </div>
             <ul id="mobile-menu" class="hidden md:hidden mt-4 space-y-2">
-                <li><a href="#cyber-crimes" class="block py-2 hover:bg-gray-800"><i class="fas fa-exclamation-triangle mr-1"></i>Cyber Crimes</a></li>
-                <li><a href="#literasi-digital" class="block py-2 hover:bg-gray-800"><i class="fas fa-book-reader mr-1"></i>Literasi Digital</a></li>
-                <li><a href="#etika-privasi" class="block py-2 hover:bg-gray-800"><i class="fas fa-user-secret mr-1"></i>Etika Privasi</a></li>
-                <li><a href="#praktik-terbaik" class="block py-2 hover:bg-gray-800"><i class="fas fa-check-circle mr-1"></i>Praktik Terbaik</a></li>
+                <li><a href="#cyber-crimes" class="block py-2 hover:bg-gray-800"><i class="fas fa-exclamation-triangle mr-1 text-red-500"></i>Cyber Crimes</a></li>
+                <li><a href="#literasi-digital" class="block py-2 hover:bg-gray-800"><i class="fas fa-book-reader mr-1 text-green-500"></i>Literasi Digital</a></li>
+                <li><a href="#etika-privasi" class="block py-2 hover:bg-gray-800"><i class="fas fa-user-secret mr-1 text-purple-500"></i>Etika Privasi</a></li>
+                <li><a href="#praktik-terbaik" class="block py-2 hover:bg-gray-800"><i class="fas fa-check-circle mr-1 text-yellow-500"></i>Praktik Terbaik</a></li>
             </ul>
         </nav>
     </header>
@@ -66,11 +66,11 @@
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <p class="mb-4">Kejahatan siber (cyber crimes) adalah tindakan kriminal yang dilakukan menggunakan teknologi komputer dan jaringan internet. Beberapa jenis cyber crimes yang umum terjadi meliputi:</p>
                     <ul class="list-disc pl-6 mb-4">
-                        <li>Phishing: Upaya untuk mendapatkan informasi sensitif seperti kata sandi dan detail kartu kredit dengan berpura-pura sebagai entitas terpercaya.</li>
-                        <li>Malware: Perangkat lunak berbahaya yang dirancang untuk merusak atau mengakses sistem komputer tanpa izin.</li>
-                        <li>Peretasan (Hacking): Akses tidak sah ke sistem komputer atau jaringan untuk mencuri data atau merusak sistem.</li>
-                        <li>Penipuan online: Berbagai bentuk penipuan yang dilakukan melalui internet, termasuk penipuan investasi dan ransomware scam.</li>
-                        <li>Cyberbullying: Pelecehan atau intimidasi yang dilakukan melalui media digital.</li>
+                        <li><i class="fas fa-fish text-red-500 mr-2"></i>Phishing: Upaya untuk mendapatkan informasi sensitif seperti kata sandi dan detail kartu kredit dengan berpura-pura sebagai entitas terpercaya.</li>
+                        <li><i class="fas fa-bug text-green-500 mr-2"></i>Malware: Perangkat lunak berbahaya yang dirancang untuk merusak atau mengakses sistem komputer tanpa izin.</li>
+                        <li><i class="fas fa-user-ninja text-blue-500 mr-2"></i>Peretasan (Hacking): Akses tidak sah ke sistem komputer atau jaringan untuk mencuri data atau merusak sistem.</li>
+                        <li><i class="fas fa-money-bill-wave text-yellow-500 mr-2"></i>Penipuan online: Berbagai bentuk penipuan yang dilakukan melalui internet, termasuk penipuan investasi dan romance scam.</li>
+                        <li><i class="fas fa-angry text-purple-500 mr-2"></i>Cyberbullying: Pelecehan atau intimidasi yang dilakukan melalui media digital.</li>
                     </ul>
                     <p>Penting bagi pengguna internet untuk selalu waspada dan menerapkan praktik keamanan siber yang baik untuk melindungi diri dari ancaman cyber crimes.</p>
                 </div>
@@ -82,7 +82,7 @@
                 <h2 class="text-3xl font-bold mb-8 text-center">4 Pilar Literasi Digital: Fondasi dalam Era Digital</h2>
                 <div class="grid md:grid-cols-2 gap-8">
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-laptop-code mr-2"></i>1. Kecakapan Digital (Digital Skills)</h3>
+                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-laptop-code mr-2 text-blue-500"></i>1. Kecakapan Digital (Digital Skills)</h3>
                         <p>Kecakapan digital adalah kemampuan menggunakan teknologi dan perangkat digital dengan efisien. Pilar ini mencakup:</p>
                         <ul class="list-disc pl-6 mt-2">
                             <li>Kemampuan mengoperasikan perangkat seperti komputer, smartphone, dan aplikasi.</li>
@@ -91,7 +91,7 @@
                         </ul>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-balance-scale mr-2"></i>2. Etika Digital (Digital Ethics)</h3>
+                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-balance-scale mr-2 text-green-500"></i>2. Etika Digital (Digital Ethics)</h3>
                         <p>Etika digital adalah pedoman moral yang mengatur perilaku individu di dunia maya. Pilar ini melibatkan:</p>
                         <ul class="list-disc pl-6 mt-2">
                             <li>Kesadaran akan hak dan privasi orang lain di internet.</li>
@@ -100,7 +100,7 @@
                         </ul>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-shield-alt mr-2"></i>3. Keamanan Digital (Digital Safety)</h3>
+                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-shield-alt mr-2 text-red-500"></i>3. Keamanan Digital (Digital Safety)</h3>
                         <p>Keamanan digital berfokus pada perlindungan data pribadi dan informasi penting dari ancaman di dunia maya. Hal ini mencakup:</p>
                         <ul class="list-disc pl-6 mt-2">
                             <li>Menggunakan kata sandi yang kuat dan berbeda untuk setiap akun.</li>
@@ -109,7 +109,7 @@
                         </ul>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-users mr-2"></i>4. Budaya Digital (Digital Culture)</h3>
+                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-users mr-2 text-purple-500"></i>4. Budaya Digital (Digital Culture)</h3>
                         <p>Budaya digital adalah pemahaman tentang bagaimana teknologi memengaruhi komunikasi, kolaborasi, dan perilaku sosial. Pilar ini mencakup:</p>
                         <ul class="list-disc pl-6 mt-2">
                             <li>Menggunakan teknologi untuk kolaborasi yang positif, seperti berbagi informasi bermanfaat dan membangun komunitas daring.</li>
@@ -125,14 +125,14 @@
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl font-bold mb-8 text-center">Etika Privasi di Media Sosial</h2>
                 <div class="bg-white p-6 rounded-lg shadow-md">
-                    <h3 class="text-xl font-semibold mb-4"><i class="fas fa-user-shield mr-2"></i>Menghormati Privasi Orang Lain</h3>
+                    <h3 class="text-xl font-semibold mb-4"><i class="fas fa-user-shield mr-2 text-blue-500"></i>Menghormati Privasi Orang Lain</h3>
                     <p class="mb-4">Sama seperti Anda ingin privasi Anda dihormati, penting untuk menghormati privasi orang lain di media sosial. Berikut beberapa panduan etis:</p>
                     <ul class="list-disc pl-6 mb-4">
-                        <li>Jangan membagikan informasi pribadi atau foto orang lain tanpa izin mereka.</li>
-                        <li>Hormati batas-batas yang ditetapkan oleh teman dan koneksi Anda di media sosial.</li>
-                        <li>Jangan menggunakan informasi pribadi orang lain untuk keuntungan pribadi atau untuk merugikan mereka.</li>
-                        <li>Berhati-hati saat memposting lokasi atau check-in yang dapat membahayakan privasi orang lain.</li>
-                        <li>Hindari membagikan screenshot percakapan pribadi tanpa persetujuan semua pihak yang terlibat.</li>
+                        <li><i class="fas fa-share-alt text-red-500 mr-2"></i>Jangan membagikan informasi pribadi atau foto orang lain tanpa izin mereka.</li>
+                        <li><i class="fas fa-border-all text-green-500 mr-2"></i>Hormati batas-batas yang ditetapkan oleh teman dan koneksi Anda di media sosial.</li>
+                        <li><i class="fas fa-hand-paper text-yellow-500 mr-2"></i>Jangan menggunakan informasi pribadi orang lain untuk keuntungan pribadi atau untuk merugikan mereka.</li>
+                        <li><i class="fas fa-map-marker-alt text-purple-500 mr-2"></i>Berhati-hati saat memposting lokasi atau check-in yang dapat membahayakan privasi orang lain.</li>
+                        <li><i class="fas fa-comment-dots text-blue-500 mr-2"></i>Hindari membagikan screenshot percakapan pribadi tanpa persetujuan semua pihak yang terlibat.</li>
                     </ul>
                     <p>Ingat, etika privasi bukan hanya tentang aturan, tetapi juga tentang membangun kepercayaan dan rasa hormat dalam komunitas online.</p>
                 </div>
@@ -144,19 +144,19 @@
                 <h2 class="text-3xl font-bold mb-8 text-center">Praktik Terbaik Media Sosial</h2>
                 <div class="grid md:grid-cols-2 gap-8">
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-user-lock mr-2"></i>1. Jaga Privasi Anda</h3>
+                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-user-lock mr-2 text-blue-500"></i>1. Jaga Privasi Anda</h3>
                         <p>Selalu periksa pengaturan privasi akun Anda dan batasi informasi yang Anda bagikan secara publik. Ingat, sekali sesuatu diunggah ke internet, sulit untuk menghapusnya sepenuhnya.</p>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-brain mr-2"></i>2. Berpikir Sebelum Memposting</h3>
+                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-brain mr-2 text-green-500"></i>2. Berpikir Sebelum Memposting</h3>
                         <p>Pertimbangkan dampak jangka panjang dari konten yang Anda posting. Apakah itu dapat mempengaruhi reputasi atau peluang Anda di masa depan? Jika ragu, lebih baik tidak memposting.</p>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-check-double mr-2"></i>3. Verifikasi Informasi</h3>
+                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-check-double mr-2 text-yellow-500"></i>3. Verifikasi Informasi</h3>
                         <p>Sebelum membagikan berita atau informasi, pastikan untuk memeriksa kebenarannya dari sumber yang terpercaya. Jangan berkontribusi pada penyebaran berita palsu atau misinformasi.</p>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-heart mr-2"></i>4. Bersikap Positif dan Konstruktif</h3>
+                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-heart mr-2 text-red-500"></i>4. Bersikap Positif dan Konstruktif</h3>
                         <p>Gunakan media sosial untuk menyebarkan positifitas. Berikan komentar yang membangun, dukung orang lain, dan hindari konflik yang tidak perlu.</p>
                     </div>
                 </div>
@@ -167,10 +167,10 @@
     <footer class="bg-gray-900 text-white py-8">
         <div class="container mx-auto text-center">
             <div class="mt-4 flex justify-center space-x-4">
-                <a href="https://www.facebook.com/agamriyandana.id" class="text-2xl hover:text-blue-400 transition duration-300"><i class="fab fa-facebook"></i></a>
-                <a href="https://x.com/agam_riyandana1/" class="text-2xl hover:text-blue-400 transition duration-300"><i class="fab fa-twitter"></i></a>
-                <a href="https://instagram.com/realagam1" class="text-2xl hover:text-blue-400 transition duration-300"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="text-2xl hover:text-blue-400 transition duration-300"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/agamriyandana.id" class="text-2xl hover:text-blue-400 transition duration-300"><i class="fab fa-facebook text-blue-600"></i></a>
+                <a href="https://x.com/agam_riyandana1/" class="text-2xl hover:text-blue-400 transition duration-300"><i class="fab fa-twitter text-blue-400"></i></a>
+                <a href="https://instagram.com/realagam1" class="text-2xl hover:text-blue-400 transition duration-300"><i class="fab fa-instagram text-pink-600"></i></a>
+                <a href="#" class="text-2xl hover:text-blue-400 transition duration-300"><i class="fab fa-linkedin text-blue-500"></i></a>
             </div>
             <p class="mt-4">&copy; <span id="current-year"></span> Literasi Digital Dan Media Sosial Cerdas. All Rights Reserved. Dibuat dengan <i class="fas fa-heart text-red-500"></i> untuk Indonesia</p>
         </div>
