--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <section id="literasi-digital" class="py-16 digital-literacy-bg text-white">
             <div class="container mx-auto px-4">
-                <h2 class="text-3xl font-bold mb-8 text-center">4 Pilar Literasi Digital: Fondasi dalam Era Digital</h2>
+                <h2 class="text-3xl font-bold mb-8 text-center">4 Pilar Literasi Digital Fondasi dalam Era Digital</h2>
                 <div class="grid md:grid-cols-2 gap-8">
                     <div class="bg-white text-gray-900 p-6 rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold mb-4"><i class="fas fa-laptop-code mr-2 text-blue-500"></i>1. Kecakapan Digital (Digital Skills)</h3>
