--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Literasi Digital dan Pendidikan Media Sosial Indonesia</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3345566781682408"
+     crossorigin="anonymous"></script>
     <style>
         .cyber-bg {
             background-color: #000;
