--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pelajari literasi digital dan penggunaan media sosial yang aman, etis, dan efektif di Indonesia. Temukan tips tentang cyber crimes, etika privasi, dan praktik terbaik.">
+    <meta name="keywords" content="literasi digital, media sosial, cyber crimes, etika privasi, keamanan online, Indonesia">
+    <meta name="author" content="Literasi Digital Dan Media Sosial Cerdas">
     <meta name="google-adsense-account" content="ca-pub-3345566781682408">
-    <title>Literasi Digital dan Pendidikan Media Sosial Indonesia</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+    <title>Literasi Digital dan Pendidikan Media Sosial Indonesia | Panduan Lengkap</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3345566781682408"
-     crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3345566781682408" crossorigin="anonymous"></script>
     <style>
         .cyber-bg {
             background-color: #000;
@@ -40,7 +42,7 @@
                     <li><a href="#etika-privasi" class="hover:text-blue-400 transition duration-300"><i class="fas fa-user-secret mr-1 text-blue-400"></i>Etika Privasi</a></li>
                     <li><a href="#praktik-terbaik" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-check-circle mr-1 text-yellow-400"></i>Praktik Terbaik</a></li>
                 </ul>
-                <button class="md:hidden text-white focus:outline-none" id="menu-toggle">
+                <button class="md:hidden text-white focus:outline-none" id="menu-toggle" aria-label="Toggle menu">
                     <i class="fas fa-bars"></i>
                 </button>
             </div>
@@ -83,7 +85,7 @@
 
         <section id="literasi-digital" class="py-16 digital-literacy-bg text-white">
             <div class="container mx-auto px-4">
-                <h2 class="text-3xl font-bold mb-8 text-center">4 Pilar Literasi Digital Fondasi dalam Era Digital</h2>
+                <h2 class="text-3xl font-bold mb-8 text-center">4 Pilar Literasi Digital: Fondasi dalam Era Digital</h2>
                 <div class="grid md:grid-cols-2 gap-8">
                     <div class="bg-white text-gray-900 p-6 rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold mb-4"><i class="fas fa-laptop-code mr-2 text-blue-500"></i>1. Kecakapan Digital (Digital Skills)</h3>
@@ -171,10 +173,10 @@
     <footer class="bg-gray-900 text-white py-8">
         <div class="container mx-auto text-center">
             <div class="mt-4 flex justify-center space-x-4">
-                <a href="https://www.facebook.com/agamriyandana.id" class="text-2xl hover:text-blue-400 transition duration-300"><i class="fab fa-facebook text-blue-600"></i></a>
-                <a href="https://x.com/agam_riyandana1/" class="text-2xl hover:text-blue-400 transition duration-300"><i class="fab fa-twitter text-blue-400"></i></a>
-                <a href="https://instagram.com/realagam1" class="text-2xl hover:text-blue-400 transition duration-300"><i class="fab fa-instagram text-pink-600"></i></a>
-                <a href="#" class="text-2xl hover:text-blue-400 transition duration-300"><i class="fab fa-linkedin text-blue-700"></i></a>
+                <a href="https://www.facebook.com/agamriyandana.id" class="text-2xl hover:text-blue-400 transition duration-300" aria-label="Facebook"><i class="fab fa-facebook text-blue-600"></i></a>
+                <a href="https://x.com/agam_riyandana1/" class="text-2xl hover:text-blue-400 transition duration-300" aria-label="Twitter"><i class="fab fa-twitter text-blue-400"></i></a>
+                <a href="https://instagram.com/realagam1" class="text-2xl hover:text-blue-400 transition duration-300" aria-label="Instagram"><i class="fab fa-instagram text-pink-600"></i></a>
+                <a href="#" class="text-2xl hover:text-blue-400 transition duration-300" aria-label="LinkedIn"><i class="fab fa-linkedin text-blue-700"></i></a>
             </div>
             <p class="mt-4">&copy; <span id="current-year"></span> Literasi Digital Dan Media Sosial Cerdas. All Rights Reserved. Dibuat dengan <i class="fas fa-heart text-red-500"></i> untuk Indonesia</p>
         </div>
