--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pelajari literasi digital dan penggunaan media sosial yang aman, etis, dan efektif di Indonesia. Temukan tips tentang cyber crimes, etika privasi, dan praktik terbaik.">
     <meta name="keywords" content="literasi digital, media sosial, cyber crimes, etika privasi, keamanan online, Indonesia">
-    <meta name="author" content="Literasi Digital Dan Media Sosial Cerdas">
+    <meta name="author" content="Agam Riyandana">
     <meta name="google-adsense-account" content="ca-pub-3345566781682408">
     <title>Literasi Digital dan Pendidikan Media Sosial Indonesia | Panduan Lengkap</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
